--- a/po/sv.po
+++ b/po/sv.po
@@ -6,11 +6,11 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Icewm 1.2.0-beta1\n"
 "Report-Msgid-Bugs-To: https://github.com/bbidulock/icewm/issues\n"
-"POT-Creation-Date: 2018-03-28 01:43-0600\n"
+"POT-Creation-Date: 2018-04-07 14:35+0200\n"
 "PO-Revision-Date: 2018-04-04 06:34+0000\n"
 "Last-Translator: Martin Devenney <devenneymartin@gmail.com>\n"
-"Language-Team: Swedish "
-"<https://l10n.opensuse.org/projects/icewm/icewm-1-4-branch/sv/>\n"
+"Language-Team: Swedish <https://l10n.opensuse.org/projects/icewm/icewm-1-4-"
+"branch/sv/>\n"
 "Language: sv\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -680,10 +680,10 @@ msgstr ""
 "  logout                      Instruera IceVM att logga ut.\n"
 "  reboot                      Instruera IceVM att starta om.\n"
 "  shutdown                    Instruera IceVM att stänga av.\n"
-"  cancel                      Instruera IceVM att avbryta "
-"inloggning/avstängning/omstart.\n"
-"  about                       Instruera IceVM att visa informationsfönstret."
-"\n"
+"  cancel                      Instruera IceVM att avbryta inloggning/"
+"avstängning/omstart.\n"
+"  about                       Instruera IceVM att visa "
+"informationsfönstret.\n"
 "  windowlist                  Instruera IceVM att visa fönsterlistan.\n"
 "  restart                     Instruera IceVM att starta om.\n"
 "  suspend                     Instruera IceVM att avvakta.\n"
@@ -749,6 +749,16 @@ msgid "Socket error: %d"
 msgstr "Uttagsfel: %d"
 
 #: src/icesm.cc:57
+#, fuzzy
+#| msgid ""
+#| "  -c, --config=FILE   Let IceWM load preferences from FILE.\n"
+#| "  -t, --theme=FILE    Let IceWM load the theme from FILE.\n"
+#| "\n"
+#| "  -d, --display=NAME  Use NAME to connect to the X server.\n"
+#| "  --sync              Synchronize communication with X11 server.\n"
+#| "\n"
+#| "  -n, --notray        Do not start icewmtray.\n"
+#| "  -s, --sound         Also start icesound.\n"
 msgid ""
 "  -c, --config=FILE   Let IceWM load preferences from FILE.\n"
 "  -t, --theme=FILE    Let IceWM load the theme from FILE.\n"
@@ -756,6 +766,7 @@ msgid ""
 "  -d, --display=NAME  Use NAME to connect to the X server.\n"
 "  --sync              Synchronize communication with X11 server.\n"
 "\n"
+"  -i, --icewm=FILE    Use FILE as the IceWM window manager.\n"
 "  -n, --notray        Do not start icewmtray.\n"
 "  -s, --sound         Also start icesound.\n"
 msgstr ""
@@ -768,20 +779,35 @@ msgstr ""
 "  -n, --notray        Starta inte icewmtray.\n"
 "  -s, --sound         Starta även icesound.\n"
 
-#: src/icesm.cc:114
+#: src/icesm.cc:120
 #, c-format
 msgid "Unknown option '%s'"
 msgstr "Okänt alternativ ’%s’"
 
-#: src/icesm.cc:302
+#: src/icesm.cc:308
 #, c-format
 msgid "%s exited with status %d."
 msgstr "%s avslutade med status %d."
 
-#: src/icesm.cc:308
+#: src/icesm.cc:314
 #, c-format
 msgid "%s was killed by signal %d."
 msgstr "%s dödades med signal %d."
+
+#: src/icesm.cc:348
+msgid ""
+" IceWM crashed for the second time in 10 seconds. \n"
+" Do you wish to:\n"
+"\n"
+"\t1: Restart IceWM?\n"
+"\t2: Abort this session?\n"
+msgstr ""
+
+#: src/icesm.cc:353
+#, fuzzy
+#| msgid "IceWM tray option"
+msgid "IceWM crash response"
+msgstr "Inställningar för IceWM-programpanelen"
 
 #: src/icesound.cc:219 src/icesound.cc:327 src/icesound.cc:631
 #, c-format
@@ -1559,7 +1585,7 @@ msgstr "_Lås arbetsstationen"
 msgid "_Cancel"
 msgstr "_Avbryt"
 
-#: src/wmdialog.cc:76 src/wmprog.cc:1279 src/wmprog.cc:1281
+#: src/wmdialog.cc:76 src/wmprog.cc:1283 src/wmprog.cc:1285
 #: src/wmtaskbar.cc:283 src/wmtaskbar.cc:285
 msgid "_Logout..."
 msgstr "Avsl_uta..."
@@ -1568,7 +1594,7 @@ msgstr "Avsl_uta..."
 msgid "_Restart icewm"
 msgstr "_Starta om icewm"
 
-#: src/wmdialog.cc:81 src/wmprog.cc:1242 src/wmtaskbar.cc:276
+#: src/wmdialog.cc:81 src/wmprog.cc:1244 src/wmtaskbar.cc:276
 #: src/wmtaskbar.cc:279
 msgid "_About"
 msgstr "_Om"
@@ -1721,23 +1747,23 @@ msgstr "_Kör..."
 msgid "_Windows"
 msgstr "_Fönster"
 
-#: src/wmprog.cc:1248
+#: src/wmprog.cc:1250
 msgid "_Help"
 msgstr "_Hjälp"
 
-#: src/wmprog.cc:1259
+#: src/wmprog.cc:1261
 msgid "_Focus"
 msgstr "_Fokus"
 
-#: src/wmprog.cc:1263
+#: src/wmprog.cc:1266
 msgid "_Preferences"
 msgstr "_Inställningar"
 
-#: src/wmprog.cc:1268
+#: src/wmprog.cc:1272
 msgid "_Themes"
 msgstr "_Teman"
 
-#: src/wmprog.cc:1273
+#: src/wmprog.cc:1277
 msgid "Se_ttings"
 msgstr "_Inställningar"
 
@@ -2008,10 +2034,21 @@ msgstr "Kunde inte hitta bild %s"
 msgid "$USER or $LOGNAME not set?"
 msgstr "$USER eller $LOGNAME inte satt?"
 
-#: src/yurl.cc:79
+#: src/yurl.cc:146
+#, fuzzy, c-format
+#| msgid "Failed to decompress %s"
+msgid "Failed to parse URL \"%s\"."
+msgstr "Kunde inte packa upp %s"
+
+#: src/yurl.cc:162
 #, c-format
-msgid "\"%s\" contains no scheme description"
-msgstr "\"%s\" innehåller inte någon metodbeskrivning"
+msgid "Incomplete hex escape in URL at position %d."
+msgstr ""
+
+#: src/yurl.cc:169
+#, c-format
+msgid "Invalid hex escape in URL at position %d."
+msgstr ""
 
 #: src/yxapp.cc:891
 msgid ""
@@ -2020,6 +2057,9 @@ msgid ""
 msgstr ""
 "  -d, --display=NAME  NAMN på den X-server som ska användas.\n"
 "  --sync              Synkronisera X11-kommandon.\n"
+
+#~ msgid "\"%s\" contains no scheme description"
+#~ msgstr "\"%s\" innehåller inte någon metodbeskrivning"
 
 #~ msgid "Please note that not all options are currently configured.\n"
 #~ msgstr "Observera att inte alla alternativ är inställda för närvarande.\n"
