--- a/po/ar.po
+++ b/po/ar.po
@@ -7,11 +7,11 @@ msgid ""
 msgstr ""
 "Project-Id-Version: icewm 1.3.12.52\n"
 "Report-Msgid-Bugs-To: https://github.com/bbidulock/icewm/issues\n"
-"POT-Creation-Date: 2018-03-28 01:43-0600\n"
+"POT-Creation-Date: 2018-04-07 14:35+0200\n"
 "PO-Revision-Date: 2018-04-01 09:56+0000\n"
 "Last-Translator: George Yacoub <george.yacoub@arabize.com>\n"
-"Language-Team: Arabic "
-"<https://l10n.opensuse.org/projects/icewm/icewm-1-4-branch/ar/>\n"
+"Language-Team: Arabic <https://l10n.opensuse.org/projects/icewm/icewm-1-4-"
+"branch/ar/>\n"
 "Language: ar\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -639,8 +639,8 @@ msgstr ""
 "  -d، عرض DISPLAY            يتصل بخادم X  المحدد بواسطة DISPLAY.\n"
 "                              الافتراضي: $DISPLAY أو :0.0 عند عدم التعيين.\n"
 "  -w، النافذة WINDOW_ID           يحدد النافذة المطلوب معالجتها. \n"
-"                             المعرفان الخاصان هما `root` جذر النافذة و`focus`"
-" النافذة التي يتم التركيز عليها حاليًا.\n"
+"                             المعرفان الخاصان هما `root` جذر النافذة "
+"و`focus` النافذة التي يتم التركيز عليها حاليًا.\n"
 " -c، فئة WM_CLASSS         فئة إدارة النوافذ للنافذة (النوافذ) \n"
 "                         المطلوب معالجتها. إذا كان WM_CLASS بها فترة، لا "
 "تتطابق سوى \n"
@@ -671,8 +671,8 @@ msgstr ""
 "   logout                      Tell IceWM to logout.\n"
 "  reboot                      Tell IceWM to reboot.\n"
 "  shutdown                    Tell IceWM to shutdown.\n"
-"  cancel                      Tell IceWM to cancel the "
-"logout/reboot/shutdown.\n"
+"  cancel                      Tell IceWM to cancel the logout/reboot/"
+"shutdown.\n"
 "  about                       Tell IceWM to show the about window.\n"
 "  windowlist                  Tell IceWM to show the window list.\n"
 "  restart                     Tell IceWM to restart.\n"
@@ -739,6 +739,16 @@ msgid "Socket error: %d"
 msgstr "خطأ في المنفذ: %d"
 
 #: src/icesm.cc:57
+#, fuzzy
+#| msgid ""
+#| "  -c, --config=FILE   Let IceWM load preferences from FILE.\n"
+#| "  -t, --theme=FILE    Let IceWM load the theme from FILE.\n"
+#| "\n"
+#| "  -d, --display=NAME  Use NAME to connect to the X server.\n"
+#| "  --sync              Synchronize communication with X11 server.\n"
+#| "\n"
+#| "  -n, --notray        Do not start icewmtray.\n"
+#| "  -s, --sound         Also start icesound.\n"
 msgid ""
 "  -c, --config=FILE   Let IceWM load preferences from FILE.\n"
 "  -t, --theme=FILE    Let IceWM load the theme from FILE.\n"
@@ -746,6 +756,7 @@ msgid ""
 "  -d, --display=NAME  Use NAME to connect to the X server.\n"
 "  --sync              Synchronize communication with X11 server.\n"
 "\n"
+"  -i, --icewm=FILE    Use FILE as the IceWM window manager.\n"
 "  -n, --notray        Do not start icewmtray.\n"
 "  -s, --sound         Also start icesound.\n"
 msgstr ""
@@ -758,20 +769,35 @@ msgstr ""
 " -n, --notray        لا يبدأ تشغيل icewmtray.\n"
 "  -s, --sound         يبدأ تشغيل icesound أيضًا.\n"
 
-#: src/icesm.cc:114
+#: src/icesm.cc:120
 #, c-format
 msgid "Unknown option '%s'"
 msgstr "خيار غير معروف: `%s'"
 
-#: src/icesm.cc:302
+#: src/icesm.cc:308
 #, c-format
 msgid "%s exited with status %d."
 msgstr "انتهى %s بالحالة %d."
 
-#: src/icesm.cc:308
+#: src/icesm.cc:314
 #, c-format
 msgid "%s was killed by signal %d."
 msgstr "تم إنهاء %s بواسطة الإشارة %d."
+
+#: src/icesm.cc:348
+msgid ""
+" IceWM crashed for the second time in 10 seconds. \n"
+" Do you wish to:\n"
+"\n"
+"\t1: Restart IceWM?\n"
+"\t2: Abort this session?\n"
+msgstr ""
+
+#: src/icesm.cc:353
+#, fuzzy
+#| msgid "IceWM tray option"
+msgid "IceWM crash response"
+msgstr "صينية خيارات IceWM"
 
 #: src/icesound.cc:219 src/icesound.cc:327 src/icesound.cc:631
 #, c-format
@@ -1554,7 +1580,7 @@ msgstr "غلق محطة العمل"
 msgid "_Cancel"
 msgstr "الغاء"
 
-#: src/wmdialog.cc:76 src/wmprog.cc:1279 src/wmprog.cc:1281
+#: src/wmdialog.cc:76 src/wmprog.cc:1283 src/wmprog.cc:1285
 #: src/wmtaskbar.cc:283 src/wmtaskbar.cc:285
 msgid "_Logout..."
 msgstr "تسجيل الخروج..."
@@ -1563,7 +1589,7 @@ msgstr "تسجيل الخروج..."
 msgid "_Restart icewm"
 msgstr "_إعادة تشغيل icewm"
 
-#: src/wmdialog.cc:81 src/wmprog.cc:1242 src/wmtaskbar.cc:276
+#: src/wmdialog.cc:81 src/wmprog.cc:1244 src/wmtaskbar.cc:276
 #: src/wmtaskbar.cc:279
 msgid "_About"
 msgstr "حول"
@@ -1715,23 +1741,23 @@ msgstr "تشغيل..."
 msgid "_Windows"
 msgstr "نوافذ"
 
-#: src/wmprog.cc:1248
+#: src/wmprog.cc:1250
 msgid "_Help"
 msgstr "مساعدة"
 
-#: src/wmprog.cc:1259
+#: src/wmprog.cc:1261
 msgid "_Focus"
 msgstr "تركيز"
 
-#: src/wmprog.cc:1263
+#: src/wmprog.cc:1266
 msgid "_Preferences"
 msgstr "_التفضيلات"
 
-#: src/wmprog.cc:1268
+#: src/wmprog.cc:1272
 msgid "_Themes"
 msgstr "سمات"
 
-#: src/wmprog.cc:1273
+#: src/wmprog.cc:1277
 msgid "Se_ttings"
 msgstr "إعدادات"
 
@@ -2000,10 +2026,21 @@ msgstr "لا يمكن العثور على الصورة %s"
 msgid "$USER or $LOGNAME not set?"
 msgstr "المستخدم أو اسم الدخول لم يتم تعيينه؟"
 
-#: src/yurl.cc:79
+#: src/yurl.cc:146
+#, fuzzy, c-format
+#| msgid "Failed to decompress %s"
+msgid "Failed to parse URL \"%s\"."
+msgstr "فشل إلغاء ضغط الصورة %s"
+
+#: src/yurl.cc:162
 #, c-format
-msgid "\"%s\" contains no scheme description"
-msgstr "\"%s\" لا تحتوي على وصف مخطط"
+msgid "Incomplete hex escape in URL at position %d."
+msgstr ""
+
+#: src/yurl.cc:169
+#, c-format
+msgid "Invalid hex escape in URL at position %d."
+msgstr ""
 
 #: src/yxapp.cc:891
 msgid ""
@@ -2012,6 +2049,9 @@ msgid ""
 msgstr ""
 "  -d, --display=NAME  اسم الخادم X المطلوب استخدامه.\n"
 "  --sync              مزامنة أوامر X11.\n"
+
+#~ msgid "\"%s\" contains no scheme description"
+#~ msgstr "\"%s\" لا تحتوي على وصف مخطط"
 
 #~ msgid "Please note that not all options are currently configured.\n"
 #~ msgstr "الرجاء ملاحظة أنه لم يتم إعداد كل الخيارات حاليًا.\n"
