--- a/po/es.po
+++ b/po/es.po
@@ -7,11 +7,11 @@ msgid ""
 msgstr ""
 "Project-Id-Version: IceWM 1.2.26\n"
 "Report-Msgid-Bugs-To: https://github.com/bbidulock/icewm/issues\n"
-"POT-Creation-Date: 2018-03-28 01:43-0600\n"
+"POT-Creation-Date: 2018-04-07 14:35+0200\n"
 "PO-Revision-Date: 2018-04-02 23:58+0000\n"
 "Last-Translator: Juan Sarria <juansarriam@gmail.com>\n"
-"Language-Team: Spanish "
-"<https://l10n.opensuse.org/projects/icewm/icewm-1-4-branch/es/>\n"
+"Language-Team: Spanish <https://l10n.opensuse.org/projects/icewm/icewm-1-4-"
+"branch/es/>\n"
 "Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -673,8 +673,8 @@ msgstr ""
 "trabajo.\n"
 "                                      Seleccione 0xFFFFFFFF o Todo para "
 "todos los espacios de trabajo.\n"
-"  setTrayOption TRAYOPTION   Configura el consejo opción de bandeja de IceWM."
-"\n"
+"  setTrayOption TRAYOPTION   Configura el consejo opción de bandeja de "
+"IceWM.\n"
 "  logout                      Indica a IceWM que salga de la sesión.\n"
 "  reboot                      Indica a IceWM que se reinicie.\n"
 "  shutdown                    Indica a IceWM que se apague.\n"
@@ -688,8 +688,8 @@ msgstr ""
 "  suspend                     Indica a IceWM que se suspenda.\n"
 "\n"
 "Expresiones:\n"
-"  Las expresiones son una lista de símbolos de un dominio concatenados por `+"
-"' o `|':\n"
+"  Las expresiones son una lista de símbolos de un dominio concatenados por `"
+"+' o `|':\n"
 "\n"
 "  EXPRESIÓN ::= SÍMBOLO | EXPRESIÓN ( `+' | `|' ) SÍMBOLO\n"
 "\n"
@@ -751,6 +751,16 @@ msgid "Socket error: %d"
 msgstr "Error de socket: %d"
 
 #: src/icesm.cc:57
+#, fuzzy
+#| msgid ""
+#| "  -c, --config=FILE   Let IceWM load preferences from FILE.\n"
+#| "  -t, --theme=FILE    Let IceWM load the theme from FILE.\n"
+#| "\n"
+#| "  -d, --display=NAME  Use NAME to connect to the X server.\n"
+#| "  --sync              Synchronize communication with X11 server.\n"
+#| "\n"
+#| "  -n, --notray        Do not start icewmtray.\n"
+#| "  -s, --sound         Also start icesound.\n"
 msgid ""
 "  -c, --config=FILE   Let IceWM load preferences from FILE.\n"
 "  -t, --theme=FILE    Let IceWM load the theme from FILE.\n"
@@ -758,6 +768,7 @@ msgid ""
 "  -d, --display=NAME  Use NAME to connect to the X server.\n"
 "  --sync              Synchronize communication with X11 server.\n"
 "\n"
+"  -i, --icewm=FILE    Use FILE as the IceWM window manager.\n"
 "  -n, --notray        Do not start icewmtray.\n"
 "  -s, --sound         Also start icesound.\n"
 msgstr ""
@@ -771,20 +782,35 @@ msgstr ""
 "  -n, --notray        No iniciar icewmtray.\n"
 "  -s, --sound         Iniciar también icesound.\n"
 
-#: src/icesm.cc:114
+#: src/icesm.cc:120
 #, c-format
 msgid "Unknown option '%s'"
 msgstr "Opción desconocida «%s»"
 
-#: src/icesm.cc:302
+#: src/icesm.cc:308
 #, c-format
 msgid "%s exited with status %d."
 msgstr "%s ha terminado con el código de salida %d."
 
-#: src/icesm.cc:308
+#: src/icesm.cc:314
 #, c-format
 msgid "%s was killed by signal %d."
 msgstr "%s ha sido finalizado por la señal %d."
+
+#: src/icesm.cc:348
+msgid ""
+" IceWM crashed for the second time in 10 seconds. \n"
+" Do you wish to:\n"
+"\n"
+"\t1: Restart IceWM?\n"
+"\t2: Abort this session?\n"
+msgstr ""
+
+#: src/icesm.cc:353
+#, fuzzy
+#| msgid "IceWM tray option"
+msgid "IceWM crash response"
+msgstr "Opción de la bandeja de IceWM"
 
 #: src/icesound.cc:219 src/icesound.cc:327 src/icesound.cc:631
 #, c-format
@@ -1590,7 +1616,7 @@ msgstr "_Bloquear sesión"
 msgid "_Cancel"
 msgstr "_Cancelar"
 
-#: src/wmdialog.cc:76 src/wmprog.cc:1279 src/wmprog.cc:1281
+#: src/wmdialog.cc:76 src/wmprog.cc:1283 src/wmprog.cc:1285
 #: src/wmtaskbar.cc:283 src/wmtaskbar.cc:285
 msgid "_Logout..."
 msgstr "Cerrar _sesión..."
@@ -1599,7 +1625,7 @@ msgstr "Cerrar _sesión..."
 msgid "_Restart icewm"
 msgstr "Reiniciar _icewm"
 
-#: src/wmdialog.cc:81 src/wmprog.cc:1242 src/wmtaskbar.cc:276
+#: src/wmdialog.cc:81 src/wmprog.cc:1244 src/wmtaskbar.cc:276
 #: src/wmtaskbar.cc:279
 msgid "_About"
 msgstr "_Acerca de"
@@ -1751,23 +1777,23 @@ msgstr "_Ejecutar..."
 msgid "_Windows"
 msgstr "_Ventanas"
 
-#: src/wmprog.cc:1248
+#: src/wmprog.cc:1250
 msgid "_Help"
 msgstr "A_yuda"
 
-#: src/wmprog.cc:1259
+#: src/wmprog.cc:1261
 msgid "_Focus"
 msgstr "_Foco"
 
-#: src/wmprog.cc:1263
+#: src/wmprog.cc:1266
 msgid "_Preferences"
 msgstr "_Preferencias"
 
-#: src/wmprog.cc:1268
+#: src/wmprog.cc:1272
 msgid "_Themes"
 msgstr "_Temas"
 
-#: src/wmprog.cc:1273
+#: src/wmprog.cc:1277
 msgid "Se_ttings"
 msgstr "Con_figuraciones"
 
@@ -2038,10 +2064,21 @@ msgstr "No se pudo encontrar la imagen %s"
 msgid "$USER or $LOGNAME not set?"
 msgstr "¿$USER o $LOGNAME no configurado?"
 
-#: src/yurl.cc:79
+#: src/yurl.cc:146
+#, fuzzy, c-format
+#| msgid "Failed to decompress %s"
+msgid "Failed to parse URL \"%s\"."
+msgstr "Error al descomprimir %s"
+
+#: src/yurl.cc:162
 #, c-format
-msgid "\"%s\" contains no scheme description"
-msgstr "«%s» no contiene ninguna descripción de esquema"
+msgid "Incomplete hex escape in URL at position %d."
+msgstr ""
+
+#: src/yurl.cc:169
+#, c-format
+msgid "Invalid hex escape in URL at position %d."
+msgstr ""
 
 #: src/yxapp.cc:891
 msgid ""
@@ -2050,6 +2087,9 @@ msgid ""
 msgstr ""
 "  -d, --display=NOMBRE      NOMBRE del servidor X que se debe usar.\n"
 " --sync                             Sincronizar los comandos de X11.\n"
+
+#~ msgid "\"%s\" contains no scheme description"
+#~ msgstr "«%s» no contiene ninguna descripción de esquema"
 
 #~ msgid "Please note that not all options are currently configured.\n"
 #~ msgstr "Tenga presente que no están configuradas todas las opciones.\n"
